force-app/main/default/objects/Community_Template_Settings__c/Community_Template_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>These settings are used to control some aspects of the Portal Design Template.</description>
    <label>Community Template Settings</label>
</CustomObject>