force-app/main/default/objects/Community_Template_Settings__c/fields/Color_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Color_Scheme__c</fullName>
    <defaultValue>&#39;Green&#39;</defaultValue>
    <label>Color Scheme</label>
    <length>100</length>
    <type>Text</type>
</CustomField>