force-app/main/default/objects/Community_Template_Settings__c/fields/Footer_Logo_ImageID__c.field-meta.xml
<CustomField>
    <fullName>Footer_Logo_ImageID__c</fullName>
    <description>Represents the Document ID that will be displayed as the Logo in the Footer of the Community Portal. The Document must follow the size restrictions outlined and must be marked as &#39;Externally Available Image = TRUE&quot; to be viewable.</description>
    <inlineHelpText>Represents the Document ID that will be displayed as the Logo in the Footer of the Community Portal. The Document must follow the size restrictions outlined and must be marked as &#39;Externally Available Image = TRUE&quot; to be viewable.</inlineHelpText>
    <label>Footer Logo ImageID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>