force-app/main/default/objects/Community_Template_Settings__c/fields/Header_Logo_ImageID__c.field-meta.xml
<CustomField>
    <fullName>Header_Logo_ImageID__c</fullName>
    <description>Represents the Document ID that will be displayed in the header of the Community Portal.  The Document must follow the size restrictions outlined and must be marked as &#39;Externally Available Image = TRUE&quot; to be viewable.</description>
    <inlineHelpText>Represents the Document ID that will be displayed in the header of the Community Portal.  The Document must follow the size restrictions outlined and must be marked as &#39;Externally Available Image = TRUE&quot; to be viewable.</inlineHelpText>
    <label>Header Logo ImageID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>